assets/components/src/button-card/style.scss
/**
 * Button Card
 */

@import '../../../shared/scss/colors';
@import '~@wordpress/base-styles/colors';

.newspack-button-card {
	border-radius: 3px;
	border: 1px solid $gray-300;
	box-shadow: inset 0 0 0 2px transparent;
	cursor: pointer;
	display: block;
	margin: 32px 0;
	padding: 32px;
	text-decoration: none;
	transition: background-color 125ms ease-in-out, border-color 125ms ease-in-out,
		box-shadow 125ms ease-in-out;

	&:focus,
	&.is-pressed {
		background: white;
		border-color: $primary-500;
		box-shadow: inset 0 0 0 2px $primary-500 !important;
		outline: none !important;
		position: relative;
	}

	&.is-pressed:focus-visible {
		box-shadow: inset 0 0 0 2px $primary-500, 0 0 0 1px white, 0 0 0 2px $primary-500 !important;
	}

	&:active,
	&:hover {
		background-color: $gray-100;
		color: $primary-600;
		text-decoration: none;

		.title,
		.desc {
			color: inherit;
		}
	}

	.title,
	.desc {
		line-height: 24px;
		transition: color 125ms ease-in-out;
	}

	.title {
		color: $gray-900;
		font-size: 17px;
		font-weight: bold;
	}

	.desc {
		color: $gray-700;
		font-size: 14px;
	}

	// Grouped

	&.grouped {
		border-radius: 0;

		& + &:not( .br--top ) {
			margin-top: -33px;
		}

		&.br--bottom {
			border-bottom-left-radius: 3px;
			border-bottom-right-radius: 3px;
		}

		&.br--top {
			border-top-left-radius: 3px;
			border-top-right-radius: 3px;
		}
	}

	// Chevron & Icon

	&.has-chevron,
	&.has-icon {
		align-items: center;
		display: grid;
		grid-gap: 16px;
		grid-template-columns: auto 24px;

		&:active,
		&:hover {
			svg {
				fill: currentColor;
			}
		}

		svg {
			fill: $primary-500;
			transition: fill 125ms ease-in-out;
		}
	}

	&.has-icon {
		grid-template-columns: 48px auto;

		&.has-chevron {
			grid-template-columns: 48px auto 24px;
		}
	}

	// Is Small

	&.is-small {
		padding: 16px;

		&.has-chevron,
		&.has-icon {
			grid-gap: 8px;

			svg {
				height: 24px;
				width: 24px;
			}
		}

		&.has-icon {
			grid-template-columns: 24px auto;

			&.has-chevron {
				grid-template-columns: 24px auto 24px;
			}
		}

		.title {
			font-size: 14px;
		}

		.desc {
			font-size: 12px;
			line-height: 16px;
		}
	}
}

